<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IdeaBytes</string>
    <string name="todo">TODO</string>
    <string name="ideabytes">ideabytes</string>
    <string name="innovation_is_business">Innovation is Business</string>
    <string name="first_name">First Name</string>
    <string name="e_mail">e-mail</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="already_i_have_account">Already I have account ?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>>
    <string name="i_don_t_have_account">I don\'t have account ?</string>
    <string name="todo1">TODO</string>
    <string name="ideabytes1">ideabytes</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="files">Files</string>
    <string name="save">Save</string>
    <string name="saveas">SaveAs</string>
    <string name="phonenumber">Enter Mobile no</string>
    <string name="welcome_to_ideabytes">Welcome to IdeaBytes</string>
    <string name="forgot_password_11">Forgot Password ?</string>
    <string name="open">open</string>
    <string name="close">close</string>

</resources>